footer overflow mobile fix

--- a/styles/group-end.css
+++ b/styles/group-end.css
@@ -1,3 +1,7 @@
+body {
+    padding-bottom: 70px;
+}
+
 p {
     font-size: 11pt;
 }
@@ -28,9 +32,6 @@ p {
 .card.mt-3.container-fluid {
     width: 355px;
     background-color: #FFD1AA;
-}
-.add-margin {
-    margin-bottom: 11vh;
 }
 
 #no-button {
